<resources>
    <string name="app_name">Calculator-Ferguson</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="slash">/</string>
    <string name="x">x</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="plusminus">+/-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="empty"></string>
    <string name="sqrt">√\u203E</string>
    <string name="square">y²</string>
    <string name="logtwo">log₂y</string>
    <string name="qrt">³√\u203E</string>
    <string name="cube">y³</string>
    <string name="ln">ln</string>
    <string name="fact">y!</string>
    <string name="pi">π</string>
    <string name="pinumber">3.14159</string>




</resources>