<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <GridLayout
        android:layout_width="@dimen/p_GL_w"
        android:layout_height="@dimen/p_GL_h"
        android:columnCount="4"
        android:columnOrderPreserved="true"
        android:rowCount="6"
        android:alignmentMode="alignBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/display"
            android:layout_width="@dimen/p_TV_w"
            android:layout_height="@dimen/p_TV_h"
            android:layout_columnSpan="4"
            android:layout_gravity="clip_horizontal"
            android:gravity="bottom|end"
            android:text="@string/zero"
            android:textSize="@dimen/p_TV_tS" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="@dimen/b_t_size"
            android:text="@string/c" />

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="@dimen/b_t_size"
            android:text="@string/seven" />

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="@dimen/b_t_size"
            android:text="@string/four" />

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="@dimen/b_t_size"
            android:text="@string/one" />

        <Button
            android:id="@+id/plusminus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="5"
            android:layout_column="0"
            android:textSize="@dimen/b_t_size"
            android:text="@string/plusminus" />

        <Button
            android:id="@+id/clear_entry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="@dimen/b_t_size"
            android:text="@string/ce" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="@dimen/b_t_size"
            android:text="@string/slash" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="1"
            android:layout_column="3"
            android:textSize="@dimen/b_t_size"
            android:text="@string/x" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="@dimen/b_t_size"
            android:text="@string/eight" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="@dimen/b_t_size"
            android:text="@string/five" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="@dimen/b_t_size"
            android:text="@string/two" />

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="5"
            android:layout_column="1"
            android:textSize="@dimen/b_t_size"
            android:text="@string/zero" />


        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="@dimen/b_t_size"
            android:text="@string/nine" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="@dimen/b_t_size"
            android:text="@string/six" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="4"
            android:layout_column="2"
            android:textSize="@dimen/b_t_size"
            android:text="@string/three" />

        <Button
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="5"
            android:layout_column="2"
            android:textSize="@dimen/b_t_size"
            android:text="@string/dot" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_b_height"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:layout_rowWeight="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:textSize="@dimen/b_t_size"
            android:layout_gravity="clip_horizontal"
            android:text="@string/equal" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="2"
            android:layout_column="3"
            android:textSize="@dimen/b_t_size"
            android:text="@string/minus" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/b_height"
            android:layout_row="3"
            android:layout_column="3"
            android:textSize="@dimen/b_t_size"
            android:text="@string/plus" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>